# MED

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.test  README.md  TODO.md  TODO_FASTFLOWLM_THINK_FLAG.md  compare_think.md  med_enhancement_seed.md  med_hyp_style_g.md  med_seed_papers.md  mkdocs.yml  plan.md  plan_chunker.md  plan_data.md  plan_neat_hyp_e.md  plan_programming_seed.md  plan_test.md  plan_think.md  plan_training_a.md  plan_training_b.md  plan_translate.md  plan_user.md  plan_version_aware.md  pyproject.toml  setup_project.sh
.github/workflows/: ci.yml
configs/: default.yaml  faiss_config.yaml  llm_config.yaml  model_router.yaml  query_expansion.yaml  retrievers.yaml  sandbox_policy.yaml  training.yaml
data/: seed_conversation_2026-03-23.json  seed_conversation_2026-03-23_b.json  seed_conversation_2026-03-23_c.json
data/analysis/: faiss_umap_20260427_2152.csv  faiss_umap_20260427_2154.csv
data/doc_urls/: archwiki.txt  github_doc_repos.yaml  linux_command_line.txt  med_papers.txt  python_docs.txt
docs/: openrouter_models.md  project_plan_v4.md  scripts_guide.md  session_progress.md
docs/site/: index.md
docs/site/architecture/: fusion-rerank.md  knowledge-graph.md  mcp-tools.md  training-pipeline.md
docs/site/dev/: contributing.md  (+2 more)
scripts/: _cleanup_so_needs_update.py  _cleanup_tavily.py  _cleanup_tavily_needs_update.py  backfill_internal_links.py  backfill_teacher_id.py  backup_data.sh  check_usage.py  compare_reviewers.py  delete_nodejs_docs.py  eval_faiss_k.py  evaluate_student.py  fetch_articles.py  fetch_note_articles.py  generate_query_rewrite_data.py  launch_gui.py  mature_memory.py  openrouter_model_test.py  questions.txt  questions_bridge.txt  rebuild_github_docs.py  remature_needs_update.py  run_seed.py  seed_and_mature.py  seed_arxiv_ids.py  seed_conversation.py  seed_from_docs.py  seed_memory.py  seed_only.py  seed_test_users.py  test_teacher.py  train_query_rewriter.py  train_student.py  visualize_faiss.py  wait_and_backfill.sh
scripts/fetchers/: __init__.py  base.py  note.py
scripts/sh/: check_progress.sh  run_job.sh  run_job_fg.sh  test_models.sh
src/auth/: deps.py  schema.py  service.py  store.py
src/common/: config.py  logger.py  models.py
src/conversation/: __init__.py  manager.py  schema.py  store.py
src/gui/: __init__.py  app.py  docs_chat.py  utils.py
src/knowledge_graph/: extractor.py  migration.py  neo4j_store.py  networkx_store.py  router_bridge.py  store.py
src/llm/: code_generator.py  daily_usage_tracker.py  error_analyzer.py  feedback_analyzer.py  gateway.py  prompt_cache.py  response_generator.py  thinking_extractor.py  usage_tracker.py
src/mcp_tools/: bi_aggregation_tool.py  sql_query_tool.py
src/memory/: alias_extractor.py  deduplicator.py  embedder.py  faiss_index.py  iterative_retrieval.py  keyword_annotator.py  memory_manager.py  metadata_store.py  schema.py  teacher_registry.py
src/orchestrator/: model_router.py  pipeline.py  query_parser.py  server.py
src/rag/: chunker.py  github_docs_fetcher.py  query_expander.py  query_rewriter.py  retriever.py  url_fetcher.py  url_list_fetcher.py  verifier.py
src/retrieval/: fusion_reranker.py  query_classifier.py
src/sandbox/: executor.py  manager.py  retry_handler.py  security.py
src/training/: base.py  logger.py  pipeline.py  registry.py
tests/: conftest.py
tests/integration/: test_docker_sandbox.py  test_e2e_pipeline.py  test_neo4j_kg.py
tests/unit/: test_alias_extractor.py  test_auth.py  test_config.py  test_conversation.py  test_curriculum_controller.py  test_embedder.py  test_faiss_index.py  test_interview_evaluators.py  test_iterative_retrieval.py  test_keyword_annotator.py  test_knowledge_graph.py  test_llm_gateway.py  test_llm_generators.py  test_ltr_ranker.py  test_maturation.py  test_memory_manager.py  test_metadata_store.py  test_openai_compatible.py  test_orchestrator.py  test_phase2.py  test_phase4.py  test_phase5.py  test_query_expander.py  test_query_rewriter.py  test_rag.py  test_refuel.py  test_sandbox.py  test_schema.py  test_scoring.py  test_teacher_provenance_step1.py  test_teacher_provenance_step2.py  test_teacher_provenance_step3.py  test_teacher_provenance_step4.py  test_teacher_provenance_step5.py  test_thinking_extractor.py  test_training.py
(+71 files in other folders)
