[project]
name = "rag-faiss-llm"
version = "0.4.0"
description = "RAG × FAISS × LLM × Memory Environment Distillation System"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # LLM
    "anthropic>=0.40.0",
    "openai>=1.12.0",
    # Embedding + Vector Search
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.26.0",
    # Database
    "aiosqlite>=0.19.0",
    # Container
    "docker>=7.0.0",
    # HTTP
    "httpx>=0.27.0",
    # Config
    "pyyaml>=6.0.1",
    # Web GUI
    "gradio>=4.20.0",
]

[project.optional-dependencies]
training = [
    # Student学習 (Phase 3)
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "trl>=0.7.0",
    "vllm>=0.3.0",
    "wandb>=0.16.0",
]
gui = [
    "gradio>=4.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
med-gui = "src.gui.app:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
