[project]
name = "rag-faiss-llm"
version = "0.4.0"
description = "RAG × FAISS × LLM × Memory Environment Distillation System"
requires-python = ">=3.11,<=3.15"
dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # LLM
    "anthropic>=0.40.0",
    "openai>=1.12.0",
    # Embedding + Vector Search
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.26.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5",
    # Database
    "aiosqlite>=0.19.0",
    # Container
    "docker>=7.0.0",
    # HTTP
    "httpx>=0.27.0",
    # Config
    "pyyaml>=6.0.1",
    # Web GUI
    "gradio>=4.20.0",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.0.0",
]
training = [
    # Student学習 (Phase 3)
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "trl>=0.7.0",
    "vllm>=0.3.0",
    "wandb>=0.16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
neat = [
    # NEAT / HyperNEAT
    "tensorneat @ git+https://github.com/EMI-Group/tensorneat.git",
    # Quality Diversity (MAP-Elites)
    "qdax>=0.5.0",
    # Evolution Strategies (参考用)
    "evosax>=0.2.0",
    # JAX backend (CPU; GPU は jax[cuda12] に差し替え)
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    # NetworkX (KG 統合時の NEAT グラフ操作)
    "networkx>=3.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

[project.scripts]
med-gui = "src.gui.app:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",   # line-too-long — docstring / コメント行は許容
    "E402",   # module-level-import-not-at-top-of-file — 遅延インポートは意図的
    "F841",   # local-variable-is-assigned-to-but-never-used — テスト用変数を許容
    "UP042",  # replace-str-enum — 既存コードの互換性のため
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "docker: mark test as requiring a running Docker daemon",
    "slow: mark test as slow (may take several seconds)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-testmon (>=2.2.0,<3.0.0)"
]
